# Github-URL-QandA

./: .gitignore  DEPLOYMENT.md  Dockerfile  README.md  agent.py  build_frontend.ps1  config.py  main.py  models.py  profile_indexer.py  pyproject.toml  requirements.txt  sample.py  test_agent.py  test_all_free.py  test_cache.py  test_chunker.py  test_embedder.py  test_github.py  test_index_tools.py  test_indexer.py  test_rag_tools.py  test_retriever.py
.github/workflows/: deploy.yml  keep_alive.yml
api/: llm_router.py  routes.py
cache/: sha_cache.py
chroma_db/: chroma.sqlite3
data/: sha_cache.json
data/graph_db/: VJsharan_Shop-Mind.json  lokesh046_neural-mind.json  mock_repo.json  test-user_dependency-test-repo.json
data/sha_cache/: lokesh046_portfolio.json
frontend/: package-lock.json
frontend/src/: App.jsx  api.js  index.css
github_qa_bot/: Hero.tsx  README.md  agent.py  chroma_test.py  config.py  main.py  pyproject.toml  rag_eval.py  ragas_eval_results.csv  requirements.txt  test_agent.py  test_cache.py  test_dependency_graph.py  test_gemini_direct.py  test_index_tools.py  test_reranker.py  test_tree_sitter.py
github_qa_bot/api/: auth_routes.py  llm_router.py  routes.py  schemas.py
github_qa_bot/cache/: sha_cache.py
github_qa_bot/graph/: graph_builder.py  (+3 more)
graph/: graph_store.py
llm/: fallback_llm.py
rag/: answer_generator.py  chunker.py  embedder.py  formatter.py  indexer.py  retriever.py  tree_sitter_chunker.py
tools/: github_tools.py  index_tools.py  rag_tool.py  summary_tools.py
utils/: file_utils.py  language_map.py  repo_utils.py
(+21 files in other folders)
