[project]
name = "github-qa-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.5.9",
    "faiss-cpu>=1.14.3",
    "fastapi>=0.137.2",
    "google-genai>=2.8.0",
    "google-generativeai>=0.8.6",
    "langchain>=1.3.10",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.2",
    "langchain-core>=1.4.8",
    "langchain-google-genai>=4.2.5",
    "langgraph>=1.2.6",
    "numpy>=2.4.6",
    "pydantic>=2.13.4",
    "pygithub>=2.9.1",
    "python-dotenv>=1.2.2",
    "tiktoken>=0.13.0",
    "uvicorn>=0.49.0",
]
